--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
+    "react-select": "^2.1.2",
     "react-testing-library": "^5.3.0",
     "redux": "^4.0.1"
   },
