--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jest-fetch-mock": "^1.7.5",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-autosuggest": "^9.4.2",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
