--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "jest-fetch-mock": "^1.7.5",
+    "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-autosuggest": "^9.4.2",
